fixed the nav, and some white space

--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,7 @@ background-color: #6d3136;
 
 a{
   color: blue;
+  text-decoration: none;
 }
 
 a:visited{
@@ -52,10 +53,9 @@ img{
 
 p{
   padding-left: 4px;
-}
-
-h2{
-text-align: center;
+  padding-right: 10px;
+  margin: 0;
+  line-height: 1.5;
 }
 
 h1, h2{
@@ -65,12 +65,58 @@ h1, h2{
   color: #3d0303;
 }
 
+h2{
+  margin: 12px 5px;
+}
+
+
+
+/* This is code to add images as bullets and access specific hrefs
+a[href*="facebook"]{
+  background-image: url("etc");
+}
+*/
+
+
+
 nav{
     border: 1px solid #222;
     border-left: 0;
     border-right: 0;
     border-style: solid;
     z-index: 10;
+
+    padding: 10px;
+}
+
+nav ul{
+  margin: 0;
+  list-style: none;
+  padding-left: 0;
+}
+
+nav li{
+  display: inline-block;
+  margin-right: 15px;
+}
+
+nav a{
+  text-decoration: none;
+  padding: 10px;
+
+  border-radius: 5px;
+}
+
+nav a:hover{
+  /*text-decoration: underline*/
+}
+
+nav li:after{
+  content: " \00a0\00a0| ";
+}
+
+nav li:last-child:after{
+  content:" ";
 }
 
 article{
@@ -79,6 +125,7 @@ article{
   border-right: 0px;
   border-style: solid;
   padding-left: 6px;
+  padding-bottom: 10px;
   position:relative;
   margin: 1px 0 1px 0;
 }
@@ -87,6 +134,6 @@ article{
   position: absolute;
   top: 0;
   right: 0;
-  margin: 18px 8px 0px 0px;
+  padding: 18px 10px 0px 0px;
   font-style: italic;
 }
